# jarvis-auth

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  apply_migrations.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  env.template  make_migration.sh  pyproject.toml  run-prod.sh  run.sh
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  docker-build-push.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: a3b4c5d6e7f8_add_refresh_token_rotation_chain.py  a7b8c9d0e1f2_add_node_registration_and_service_access.py  b4c5d6e7f8a9_backfill_jarvis_logs_node_access.py  b8c9d0e1f2a3_add_households_and_memberships.py  c5d6e7f8a9b0_add_temp_password_fields.py  c9d0e1f2a3b4_add_settings_table.py  d0e1f2a3b4c5_add_is_superuser_to_users.py  e1f2a3b4c5d6_seed_settings.py  f2a3b4c5d6e7_add_household_invites.py  fd09b451cc1b_initial.py
jarvis_auth/app/: __init__.py  main.py
jarvis_auth/app/api/: __init__.py  admin_app_clients.py  admin_nodes.py  admin_users.py  auth.py  deps.py  households.py  internal.py  invites.py  superuser_views.py
prds/: app-to-app-auth.md  auth.md  clarification-app-to-app.md  prd.md
scripts/: apply_migrations.py  make_migration.py
tests/: conftest.py  test_account_deletion.py  test_admin_users_auth.py  test_app_clients.py  test_auth_api.py  test_auth_flow.py  test_auth_rate_limit.py  test_households.py  test_invites.py  test_login_timing.py  test_node_auth.py  test_password_reset.py  test_secret_guard.py  test_settings.py  test_setup.py  test_superuser.py
(+28 files in other folders)
